# ncgreet

./: Authenticator.cc  Authenticator.hh  Configurator.cc  Configurator.hh  Globals.hh  Greeter.cc  Greeter.hh  Main.cc  README.md  meson.build
extra/: configrc
